Bug 262481 - kio_filenamesearch consumes 1GB+ memory
Summary: kio_filenamesearch consumes 1GB+ memory
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: search (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-08 02:11 UTC by Michael Meier
Modified: 2011-01-09 00:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meier 2011-01-08 02:11:26 UTC
Version:           4.6 (using KDE 4.5.95) 
OS:                Linux

Using dolphin, go to the root folder of a hard disk and start searching for a file.

As the search goes on, the kio_filenamesearch process will consume more and more memory. I killed it when its heap size was about 1.1GB, just soon enough before it would have brought my system down due to continuous swapping.

Reproducible: Always
Comment 1 Peter Penz 2011-01-09 00:49:10 UTC
SVN commit 1212997 by ppenz:

Fix memory leak in searchDirectory()

BUG: 262481
FIXED-IN: 4.6.0


 M  +3 -0      filenamesearchprotocol.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1212997
Comment 2 Peter Penz 2011-01-09 00:49:36 UTC
SVN commit 1212998 by ppenz:

Forward port: Fix memory leak in searchDirectory()

CCBUG: 262481



 M  +3 -0      filenamesearchprotocol.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1212998