Fix memory leak in searchDirectory()

BUG: 262481
FIXED-IN: 4.6.0

svn path=/branches/KDE/4.6/kdebase/apps/; revision=1212997