src/search/filenamesearchprotocol.cpp
@@ -101,6 +101,9 @@ void FileNameSearchProtocol::searchDirectory(const KUrl& directory)
         }
     }
     listEntry(KIO::UDSEntry(), true);
+    
+    delete dirLister;
+    dirLister = 0;
 
     // Recursively iterate all sub directories
     foreach (const KUrl& pendingDir, pendingDirs) {
